test/class/invalid/callingConstructorWithWrongParam.wacc
begin
  class Dog is
  
    int x;
    
    init(int x) is
       self.x = x
    end
  
  end

  Dog z = new Dog(1, 2)

end
